--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
                     <div class="bg-amber-500 flex items-center w-28 h-1 leading-none rounded-full ">
                         <!-- <span>Lifestyle</span> -->
                     </div>
-                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl"><a href="#_">General or Academic English
-                            Program</a>
+                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl"><a href="#_">General or Academic English</a>
                     </h2>
                     <p class="text-sm text-gray-500">
                         <a class="transition-all hover:text-yellow-500" href="">
@@ -238,7 +237,7 @@
                             src="assets/images/slide1.jpg">
                     </a>
                     <div class="bg-pink-500 flex items-center w-28 h-1 leading-none rounded-full "> </div>
-                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Professional or Executive English Programs</h2>
+                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Professional or Executive English</h2>
                     <p class="text-sm text-gray-500"><a href="">The Executive English Programme is a bouquet of
                             individually tailored English courses carefully designed to meet your specific
                             communication</a>
@@ -251,8 +250,8 @@
                             src="assets/images/slide1.jpg">
                     </a>
                     <div class="bg-red-500 flex items-center w-28 h-1 leading-none rounded-full "></div>
-                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl">Vacation English Programs</h2>
-                    <p class="text-sm text-gray-500"><a href="">The Vacation English Immersion Programme is an
+                    <h2 class="text-lg font-bold sm:text-xl md:text-2xl">July-August Vacation English</h2>
+                    <p class="text-sm text-gray-500"><a href="">The Vacation English Immersion Program is an
                             exceptional opportunity for students to improve their English in an English-speaking
                             environment while.</a></p>
 
@@ -350,157 +349,7 @@
         </div>
     </section>
 
-    <!-- AlpineJS Library -->
 
-    <!-- features-06 -->
-    <section
-        class="box-border flex justify-center relative w-full font-sans leading-6 text-gray-700 bg-white border-0 border-gray-200 border-solid">
-        <div
-            class="box-border flex flex-col items-center px-8 py-20 mx-auto leading-6 border-solid max-w-7xl xl:px-16 md:items-stretch md:justify-center md:py-24">
-            <div class="relative pb-10">
-                <h2
-                    class="w-full m-0 font-sans text-4xl font-black leading-loose tracking-wide text-center text-gray-700 border-0 border-gray-200 sm:text-5xl">
-                    Why choose us?
-                </h2>
-                <p
-                    class="w-full max-w-xl mx-0 mx-auto mt-4 mb-0 font-sans text-sm font-medium leading-relaxed text-center text-gray-400 border-0 border-gray-200 lg:text-lg md:text-base">
-                    Check out our set of awesome features and tools. We are the industry leaders in providing quality
-                    tools, trusted and used by over 1,200 companies. We kind'of rock!
-                </p>
-            </div>
-
-            <div class="z-10 flex gap-5 md:flex-wrap lg:flex-wrap">
-                <!-- <div class="z-10 flex gap-5 md:flex-wrap lg:flex-wrap"> -->
-                <!-- Feature 1 -->
-                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
-                    data-rounded-max="rounded-full">
-                    <div
-                        class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
-                        <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
-                            data-rounded="rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                class="leading-6 text-center text-gray-700 align-middle stroke-current w-7 h-7"
-                                viewbox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none"
-                                stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M0 0h24v24H0z" stroke="none"></path>
-                                <path
-                                    d="M12 3l8 4.5v9L12 21l-8-4.5v-9L12 3M12 12l8-4.5M12 12v9M12 12L4 7.5M16 5.25l-8 4.5">
-                                </path>
-                            </svg>
-                        </div>
-                        <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
-                            <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
-                                5000</h6>
-                            <p
-                                class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
-                                FOREIGN FOLLOWERS
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Feature 2 -->
-                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
-                    data-rounded-max="rounded-full">
-                    <div
-                        class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
-                        <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
-                            data-rounded="rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                class="leading-6 text-center text-gray-700 align-middle stroke-current w-7 h-7"
-                                width="44" height="44" viewbox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50"
-                                fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M0 0h24v24H0z" stroke="none"></path>
-                                <path d="M7 12l5 5L22 7M2 12l5 5m5-5l5-5"></path>
-                            </svg>
-
-                        </div>
-                        <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
-                            <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
-                                20</h6>
-                            <p
-                                class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
-                                CERTIFIED TEACHERS.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Feature 3 -->
-                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
-                    data-rounded-max="rounded-full">
-                    <div
-                        class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
-                        <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
-                            data-rounded="rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                class="leading-6 text-center text-gray-700 align-middle stroke-current w-7 h-7"
-                                width="44" height="44" viewbox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50"
-                                fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M0 0h24v24H0z" stroke="none"></path>
-                                <path
-                                    d="M9 4.55a8 8 0 016 14.9M15 15v5h5M5.63 7.16v.01M4.06 11v.01M4.63 15.1v.01M7.16 18.37v.01M11 19.94v.01">
-                                </path>
-                            </svg>
-                        </div>
-                        <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
-                            <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
-                                2240</h6>
-                            <p
-                                class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
-                                STUDENTS ENROLLED.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Feature 4 -->
-                <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
-                    data-rounded-max="rounded-full">
-                    <div
-                        class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
-                        <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
-                            data-rounded="rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg"
-                                class="leading-6 text-center text-gray-700 align-middle stroke-current w-7 h-7"
-                                width="44" height="44" viewbox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50"
-                                fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M0 0h24v24H0z" stroke="none"></path>
-                                <path
-                                    d="M3 12h3M12 3v3M7.8 7.8L5.6 5.6M16.2 7.8l2.2-2.2M7.8 16.2l-2.2 2.2M12 12l9 3-4 2-2 4-3-9">
-                                </path>
-                            </svg>
-                        </div>
-                        <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
-                            <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
-                                2000</h6>
-                            <p
-                                class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
-                                COMPLETED COURSES
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Blob Top Left -->
-        <div class="absolute top-0 left-0 -ml-56 opacity-25 w-96 h-96">
-            <svg class="text-pink-500 opacity-50 fill-current w-88 h-88" data-primary="pink-500" viewbox="0 0 200 200"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M25.5,-24.7C35.8,-15.2,48.9,-7.6,50.6,1.7C52.3,11,42.6,22,32.3,31.2C22,40.4,11,47.8,-1.9,49.8C-14.9,51.7,-29.7,48.1,-41.1,38.9C-52.5,29.7,-60.5,14.9,-60.3,0.3C-60,-14.3,-51.5,-28.6,-40,-38.1C-28.6,-47.6,-14.3,-52.3,-3.4,-48.9C7.6,-45.5,15.2,-34.2,25.5,-24.7Z"
-                    transform="translate(100 100)"></path>
-            </svg>
-        </div>
-        <!-- Blob Top Right -->
-        <!-- <div class="absolute top-0 right-0 -mb-56 opacity-25 w-96 h-96">
-            <svg class="w-full h-full text-yellow-500 opacity-50 fill-current" data-primary="yellow-500"
-                viewbox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M44.3,-48.3C55.3,-33.4,60.4,-16.7,62.2,1.8C64,20.3,62.5,40.6,51.6,55.3C40.6,70,20.3,79,2.3,76.7C-15.7,74.4,-31.4,60.7,-46.7,46C-62,31.4,-76.9,15.7,-78.5,-1.6C-80,-18.8,-68.2,-37.6,-52.9,-52.5C-37.6,-67.5,-18.8,-78.5,-1.1,-77.5C16.7,-76.4,33.4,-63.3,44.3,-48.3Z"
-                    transform="translate(100 100)"></path>
-            </svg>
-        </div> -->
-
-    </section>
 
     <!-- AlpineJS Library -->
     <!-- call-to-action-05 -->
@@ -514,15 +363,20 @@
                 Join our community <span class="block text-indigo-200 xl:inline" data-primary="indigo-500">of passionate
                     learners</span>
             </h2>
-            <div class="flex mb-8 lg:mt-6 lg:mb-0">
-                <div class="inline-flex">
+            
+                <div class="flex mx-auto justify-center">
+                    <a href="#_"
+                        class="inline-flex items-center justify-center px-5 py-3 mr-56 text-base font-medium text-white transition duration-150 ease-in-out bg-amber-400 border border-transparent rounded-md hover:text-white hover:bg-amber-500 focus:outline-none focus:shadow-outline "
+                        data-primary="indigo-600">
+                        Join us in Ghana
+                    </a>
                     <a href="#_"
                         class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-white transition duration-150 ease-in-out bg-amber-400 border border-transparent rounded-md hover:text-white hover:bg-amber-500 focus:outline-none focus:shadow-outline "
                         data-primary="indigo-600">
-                        Book now
+                        Online Programs
                     </a>
                 </div>
-            </div>
+            
             <div class="bottom-0 right-0 mb-0 mr-3 lg:absolute lg:-mb-12">
                 <img src="https://cdn.devdojo.com/images/september2020/cta-1.png"
                     class="max-w-xs mb-4 opacity-75 md:max-w-2xl lg:max-w-lg xl:mb-0 xl:max-w-md">
