--- a/student_details.html
+++ b/student_details.html
@@ -94,10 +94,56 @@
         </div>
     </section>
     <!-- Navbar End-->
+    <!-- Banner -->
+    <section class="relative py-16 bg-white bg-bottom bg-cover"
+        style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
+        <div class="flex justify-center ">
+            <div>
+                <h1 class="text-white font-bold text-5xl mb-2 text-center"> Coming to Ghana</h1>
+                <div class="w-82 h-2 bg-blue-500 rounded"></div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner End-->
     <!-- content -->
-    <section class=" flex items-center justify-center min-h-screen">
+    <section class=" flex items-center justify-center m-4 min-h-screen">
         <div class="w-4/5 bg-gray-100 rounded-2xl p-8 drop-shadow-xl">
-            
+            <ul>
+            </ul>
+            <h1 class="text-4xl font-bold mb-2">Comming to Ghana</h1>
+            <hr>  
+            <h2 class="text-2xl uppercase my-2">DEPARTURE PREPARATION AND TRAVEL REQUIREMENTS</h2>  
+            <hr>
+            <ul>
+                <li>
+                    <h2 class="text-xl font-bold mb-2">Travel documents</h2>
+                    <p class="mb-4">A passport is the most important travel document for all cross-border travelers. This is the preferred travel document for all students traveling to Ghana for their studies. At Eagle Vision Institute, we strongly recommend that all our prospective students embark on their journey to Ghana with a valid passport. This makes immigration formalities quite easy for the students.</p>
+                </li>
+                <li>
+                    <h2 class="text-xl font-bold mb-2">ECOWAS ID Card (National ID Card)</h2>
+                    <p class="mb-4">ECOWAS member states have recently begun issuing new ID Cards to their nationals, which they call the ECOWAS Card. This is supposed to serve as a travel document for traveling to any country within ECOWAS. However, most ECOWAS countries have not as yet implemented the use of this card for traveling. We, therefore, strongly advise our prospective students not to rely on this document for traveling to Ghana.</p>
+                </li>
+                <li>
+                    <h2 class="text-xl font-bold mb-2">Laissez-passer</h2>
+                    <p class="mb-4">You may also use a valid laissez-passer to travel to Ghana, but this should be only in extreme cases where a valid passport is not immediately available. Remember that a laissez-passer is only for a single entry and for a short stay. You may not use a laissez-passer more than once. We strongly advise that our students do not use laissez-passer so that they avoid getting into problems at the borders.</p>
+                </li>
+                <li>
+                    <h2 class="text-xl font-bold mb-2">Student visa</h2>
+                    <div class="mb-4">
+                        <h3 class="font-bold">ECOWAS Citizens</h3>
+                        <p>Citizens of ECOWAS member states are exempted from visa to enter Ghana. They only need to hold a valid passport which will be presented at the entry point (airport or border) for a stamp. The following are ECOWAS member states: BENIN, BURKINA FASO, TOGO, GUINEA, MALI, NIGER, COTE D’IVOIRE, NIGERIA, LIBERIA, SIERRA LEONE, SENEGAL, GAMBIA, CAPE VERDE, GUINEA BISSAU and GHANA</p>
+                    </div>
+                    <div class="mb-4">
+                        <h3 class="font-bold">Non-ECOWAS Citizens</h3>
+                        <p>Nationals of countries outside ECOWAS must apply for and obtain an entry visa to Ghana before they embark on their journey. When in doubt, please contact Eagle Vision Institute (<a href="mailto:info@eaglevisionworld.com">info@eaglevisionworld.com</a> / <a href="tel:+233244662064">+233244662064</a>) for assistance.</p>
+                    </div>
+                </li>
+                <li>
+                    <h2 class="text-xl font-bold mb-2">Vaccination and Tests</h2>
+                    <p class="mb-4">You are required to be in possession of a valid international vaccination card (yellow card), with the relevant vaccinations, issued in your home country before traveling to Ghana.</p>
+                    <p class="mb-4">Additionally, in the light of the current COVID-19 pandemic, you are required to present a valid negative PCR test result which must have been taken within 72 hours before traveling. There is also a mandatory COVID-19 test on arrival at the airport at the cost of US$ 50.00 for ECOWAS citizens and US$ 150.00 for other nationals borne by the passenger.</p>
+                </li>
+            </ul>
         </div>
     </section>
     <!-- content end -->
