--- a/students.html
+++ b/students.html
@@ -124,19 +124,19 @@
                 <div class="grid grid-cols-12 col-span-12 gap-7">
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="comming.html" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
                         </a>
                         <div class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
                             <h2 class="text-base font-bold sm:text-lg md:text-xl">
-                                <a href="coming.html">Coming To Ghana</a>
+                                <a href="student_details.html">Coming To Ghana</a>
                             </h2>
                             <p class="mt-2 text-sm text-gray-500">
                                 Prepare for your journey to Ghana with confidence! Discover essential travel tips and requirements to ensure a smooth arrival.
                                 From securing your passport and understanding visa needs to important health precautions, we've got you covered. 
-                                <a class="hover:text-blue-700" href="coming.html">Read more...</a>
                             </p>
+                                <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
                         </div>
                         
                     </div>
@@ -149,14 +149,12 @@
                         </a>
                         <div
                             class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <div
-                                class="bg-red-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
-                                <span>Food</span>
-                            </div>
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Eating for
-                                    Productivity</a></h2>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">While in Ghana</a></h2>
                             <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
-                                you can eat to maximize productivity.</p>
+                                you can eat to maximize productivity.
+                            </p>
+                            <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
+
                         </div>
                     </div>
 
@@ -168,14 +166,13 @@
                         </a>
                         <div
                             class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <div
-                                class="bg-purple-500 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
-                                <span>Resources</span>
-                            </div>
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">A Design Mind-set</a>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">General Walfare</a>
                             </h2>
                             <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
-                                to improve your eye for design.</p>
+                                to improve your eye for design.
+                            </p>
+                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
+
                         </div>
                     </div>
                     <div
@@ -186,14 +183,11 @@
                         </a>
                         <div
                             class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <div
-                                class="bg-indigo-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
-                                <span>Inspiration</span>
-                            </div>
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Best Workstations of the
-                                    Year</a></h2>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Placement</a></h2>
                             <p class="mt-2 text-sm text-gray-500">Check out these inspiring workstations to get ideas on
-                                how to level-up your workstation.</p>
+                                how to level-up your workstation.
+                            </p>
+                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
                         </div>
                     </div>
 
@@ -205,29 +199,42 @@
                         </a>
                         <div
                             class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <div
-                                class="bg-red-400 absolute top-0 -mt-3 flex items-center px-3 py-1.5 leading-none w-auto inline-block rounded-full text-xs font-medium uppercase text-white inline-block">
-                                <span>Food</span>
-                            </div>
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Eating for
-                                    Productivity</a></h2>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Our books</a></h2>
                             <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
-                                you can eat to maximize productivity.</p>
+                                you can eat to maximize productivity.
+                            </p>
+                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
                         </div>
                     </div>
-
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
                         <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/book-design.jpg">
+                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
                         </a>
                         <div
                             class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">A Design Mind-set</a>
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Examinations</a>
                             </h2>
                             <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
-                                to improve your eye for design.</p>
+                                to improve your eye for design.
+                            </p>
+                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
+                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                            <img class="object-cover w-full shadow-sm "
+                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
+                        </a>
+                        <div
+                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
+                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Enrolment Policies</a></h2>
+                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
+                                you can eat to maximize productivity.
+                            </p>
+                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
                         </div>
                     </div>
                 </div>
