--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <div class="relative float-left -mr-[100%] w-full transition-transform duration-[600ms] ease-in-out motion-reduce:transition-none"
                 data-twe-carousel-active data-twe-carousel-item style="backface-visibility: hidden">
                 <img src="assets/images/slide1.jpg" class="block object-cover w-full h-screen" alt="..." />
-                <div class="absolute inset-x-[15%] bottom-5 hidden py-5 text-center text-white md:block">
-                    <h5 class="text-xl">First slide label</h5>
-                    <p>
+                <div class="absolute inset-x-[15%] bottom-5 hidden py-5 text-center bg-black bg-opacity-70 rounded-lg  text-white md:block">
+                    <h5 class="text-3xl">First slide label</h5>
+                    <p class="text-2xl">
                         Some representative placeholder content for the first slide.
                     </p>
                 </div>
@@ -302,7 +302,6 @@
     </section>
     <!-- Programmes end -->
 
-    <!-- AlpineJS Library -->
     <!-- CEO Messages -->
     <section
         class="relative flex flex-col-reverse min-h-screen w-full px-6 py-16 bg-gray-900 lg:pt-0 lg:flex-col lg:pb-0">
@@ -312,7 +311,7 @@
                 viewbox="0 0 100 100" fill="currentColor" preserveaspectratio="none slice">
                 <path d="M50 0H80L50 120H0L50 0Z"></path>
             </svg>
-            <img class="object-cover w-full h-56 rounded shadow-lg lg:rounded-none lg:shadow-none md:h-96 lg:h-full"
+            <img class="object-cover object-right-top w-full h-56 rounded shadow-lg lg:rounded-none lg:shadow-none md:h-96 lg:h-full"
                 src="assets/images/ceo.jpg" alt="">
         </div>
         <div class="relative flex flex-col items-start w-full max-w-xl px-4 mx-auto md:px-0 lg:px-8 lg:max-w-screen-xl">
@@ -335,24 +334,226 @@
                     <i class="fa-brands fa-facebook text-white text-3xl mr-5"></i>
                     <i class="fa-brands fa-linkedin text-white text-3xl"></i>
                 </p>
-                <!-- <div class="flex flex-col items-center pt-2 sm:flex-row sm:pt-4">
-                    <a href="/"
-                        class="inline-flex items-center justify-center w-full h-12 px-6 mb-4 font-medium tracking-wide text-white transition duration-200 bg-amber-500 rounded shadow-md sm:w-auto sm:mr-4 sm:mb-0 hover:bg-amber-700 focus:shadow-outline focus:outline-none">
-                        Book now
-                    </a>
-                    <a href="/"
-                        class="inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide text-white transition duration-200 bg-gray-700 rounded shadow-md sm:w-auto hover:bg-amber-700 focus:shadow-outline focus:outline-none">
-                        Contact us
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
+       <!-- Why Choose us -->
+       <section
+       class="box-border relative w-full font-sans leading-6 text-gray-700 bg-white border-0 border-gray-200 border-solid">
+       <div
+           class="box-border flex flex-col items-center px-8 py-20 mx-auto leading-6 border-solid max-w-7xl xl:px-16 md:items-stretch md:justify-center md:py-24">
+           <div class="relative pb-10">
+               <h2
+                   class="w-full m-0 font-sans text-4xl font-black leading-loose tracking-wide text-center text-gray-700 border-0 border-gray-200 sm:text-5xl">
+                   Why choose us?
 
+               </h2>
+               <p
+                   class="w-full max-w-xl mx-0 mx-auto mt-4 mb-0 font-sans text-sm font-medium leading-relaxed text-center text-gray-400 border-0 border-gray-200 lg:text-lg md:text-base">
+                   Check out our set of awesome features and tools. We are the industry leaders in providing quality
+                   tools, trusted and used by over 1,200 companies. We kind'of rock!
+               </p>
+           </div>
 
+           <div class="z-10 grid gap-5 md:grid-cols-6 lg:grid-cols-9">
+               <!-- Reason 1 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-book m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Relevant Curriculum and High-Quality Teaching </h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Our courses are regularly updated to meet modern global communication needs, using the
+                               latest course books and resources from our library and language lab.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 2 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-chalkboard-teacher m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Qualified Professional Teachers</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Our teachers are well-qualified and trained to provide student-centered lessons,
+                               ensuring effective language use in daily communication.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 3 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-school m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Modern Learning Environment</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Our new school building is designed for modern language education, with air-conditioned
+                               classrooms, smart TVs, and a comfortable student lounge.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 4 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-coffee m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Comfortable Facilities</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Enjoy our clean, safe canteen offering a variety of affordable food and drinks, and
+                               relax in our beautifully-furnished student lounge.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 5 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-user-friends m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Supportive Administrative Staff</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Our friendly administrative staff are dedicated to providing the support you need for a
+                               satisfying learning experience.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 6 -->
+               <div class="col-span-3 font-sans text-gray-700 border-0 bg-gray-50 rounded-3xl"
+                   data-rounded="rounded-3xl" data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-globe m-2"></i>
 
-    <!-- AlpineJS Library -->
-    <!-- call-to-action-05 -->
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Diverse Student Community</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Join a rich mix of students from different cultures and backgrounds, creating a
+                               wonderful atmosphere for making lifelong international friends.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 7 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-dollar-sign mx-3 my-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Affordable and Transparent Pricing</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               We offer high-quality education at a competitive price with a clear, transparent fee
+                               structure and no hidden fees.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 8 -->
+               <div class="col-span-3 font-sans text-gray-700 bg-gray-50 rounded-3xl" data-rounded="rounded-3xl"
+                   data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-tags m-2"></i>
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Discounts and Value Offers</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               Benefit from our programme combination discounts, such as 10% cashback on tuition fees
+                               when studying multiple programmes like English with Test Preparation or Computer
+                               Literacy.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+               <!-- Reason 9 -->
+               <div class="col-span-3 font-sans text-gray-700 border-0 bg-gray-50 rounded-3xl"
+                   data-rounded="rounded-3xl" data-rounded-max="rounded-full">
+                   <div
+                       class="box-border flex flex-col items-start h-full px-2 py-8 mx-4 leading-6 text-center border-solid sm:flex-row sm:items-start sm:text-left">
+                       <div class="flex-shrink-0 p-3 font-sans text-gray-700 border border-gray-200 rounded-full"
+                           data-rounded="rounded-full">
+                           <i class="fas fa-trophy m-2"></i>
+
+                       </div>
+                       <div class="mt-4 font-sans text-left text-gray-700 border-0 border-gray-200 sm:mt-2 sm:ml-4">
+                           <h6 class="box-border text-2xl font-bold leading-none tracking-wide text-left border-solid">
+                               Track Record of Excellence</h6>
+                           <p
+                               class="box-border mx-0 mt-1 mb-0 font-medium leading-loose text-gray-400 border-solid sm:mt-4">
+                               We have a proven history of delivering excellence in English Language Teaching, with
+                               deep experience in supporting international students to achieve fluency.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+
+       <!-- Blob Top Left -->
+       <div class="absolute top-0 left-0 -ml-56 opacity-25 w-96 h-96">
+           <svg class="text-pink-500 opacity-50 fill-current w-88 h-88" data-primary="pink-500" viewbox="0 0 200 200"
+               xmlns="http://www.w3.org/2000/svg">
+               <path
+                   d="M25.5,-24.7C35.8,-15.2,48.9,-7.6,50.6,1.7C52.3,11,42.6,22,32.3,31.2C22,40.4,11,47.8,-1.9,49.8C-14.9,51.7,-29.7,48.1,-41.1,38.9C-52.5,29.7,-60.5,14.9,-60.3,0.3C-60,-14.3,-51.5,-28.6,-40,-38.1C-28.6,-47.6,-14.3,-52.3,-3.4,-48.9C7.6,-45.5,15.2,-34.2,25.5,-24.7Z"
+                   transform="translate(100 100)"></path>
+           </svg>
+       </div>
+
+   </section>
+    <!-- call to action -->
     <section
         class="flex items-center justify-center py-0 bg-white bg-gradient-to-br from-indigo-600 via-indigo-500 to-teal-400 min-w-screen"
         data-primary="indigo-600">
@@ -383,9 +584,9 @@
             </div>
         </div>
     </section>
-
-    <!-- AlpineJS Library -->
-    <!-- testimonials-09 -->
+    <!-- Call to action End -->
+    
+    <!-- testimonials -->
     <section class="w-full bg-gray-50 sm:py-16 py-12 md:py-20 relative">
         <div class="max-w-7xl mx-auto px-10">
             <div class="flex flex-col mb-7 sm:mb-20 items-start md:items-center justify-center">
@@ -602,9 +803,9 @@
             </a>
         </div>
     </section>
-    <!-- AlpineJS Library -->
+    <!-- Testimonial End-->
 
-    <!-- faqs-10 -->
+    <!-- Faqs -->
     <section class="py-12 bg-blue-600 sm:py-16 md:py-20 lg:py-24 pb-28" data-primary="amber-600"
         data-tails-scripts="//unpkg.com/alpinejs">
         <div class="max-w-6xl px-8 mx-auto lg:px-16">
@@ -835,9 +1036,9 @@
 
         </div>
     </section>
+    <!-- Faqs -->
 
-    <!-- AlpineJS Library -->
-    <!-- form-06 -->
+    <!-- Contact Us -->
     <section class="h-auto bg-white">
         <div class="max-w-7xl mx-auto py-4 px-10  sm:px-6 lg:px-8 sm:text-center">
             <!-- <h2 class="text-base font-semibold text-indigo-600 tracking-wide uppercase">subtitle text</h2> -->
@@ -1169,9 +1370,7 @@
         </div>
 
     </section>
-
-
-
+    <!-- Contact Us end -->
 
     <!-- footer-07 -->
 
