--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,17 @@
         </div>
     </section>
     <!-- Navbar End-->
+         <!-- Banner -->
+    <section class="relative py-16 bg-white bg-bottom bg-cover"
+    style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
+    <div class="flex justify-center ">
+        <div>
+            <h1 class="text-white font-bold text-5xl mb-2 text-center">Contact</h1>
+            <div class="w-82 h-2 bg-blue-500 rounded"></div>
+        </div>
+    </div>
+</section>
+<!-- Banner End-->
     <section class="relative py-0 bg-white lg:py-6">
 
         <div class="flex flex-col items-center justify-between px-10 mx-auto max-w-8xl  lg:flex-row">
