--- a/accomodation_details.html
+++ b/accomodation_details.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
                 <a href="#_" 
-                class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Online programme
+                class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Online programme
                 </a>
             </div>
         </div>
@@ -89,89 +89,53 @@
                         class="w-6" alt="">
                     </a>
                 <a href="register.html"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Join us in Ghana</a>
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Join us in Ghana</a>
             </div>
         </div>
     </section>
     <!-- Navbar End-->
-    <!-- Banner -->
-    <section class="relative py-16 bg-white bg-bottom bg-cover"
-        style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
-        <div class="flex justify-center ">
-            <div>
-                <h1 class="text-white font-bold text-5xl mb-2 text-center">Accomodation</h1>
-                <div class="w-82 h-2 bg-blue-500 rounded"></div>
-            </div>
-        </div>
-    </section>
-    <!-- Banner End-->
-       <!-- card -->
-    <section class="relative w-full bg-white">
-        <div class="absolute w-full h-32 bg-gradient-to-b from-gray-100 to-white"></div>
-        <div class="relative w-full px-5 py-10 mx-auto sm:py-12 md:py-16 md:px-10 max-w-7xl">
-
-
-            <div class="flex grid h-full grid-cols-12 gap-10 pb-10 mt-8 sm:mt-16">
-
-
-                <div class="grid grid-cols-12 col-span-12 gap-7">
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="accomodation_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://img.freepik.com/free-photo/apartment-building-city-with-copy-space_23-2148814165.jpg?t=st=1718107569~exp=1718111169~hmac=ce5d3db20eb29caffdcee0b20a39c5dcaa4997feb08d1c32a726df4061ffec61&w=740">
-                        </a>
-                        <div class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl">
-                                <a href="accomodation_details.html">Student Hostel</a>
-                            </h2>
-                            <p class="mt-2 text-sm text-gray-500">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eius laudantium perspiciatis veniam, aspernatur eveniet velit eum quidem. Sapiente, necessitatibus. Saepe in alias ratione consequuntur nulla officiis, rerum placeat excepturi.
-                            </p>
-                                <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="accomodation_details.html">Read more...</a>
-                        </div>
-                        
-                    </div>
-
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="accomodation_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Guest Houses</a></h2>
-                            <p class="mt-2 text-sm text-gray-500">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In neque reiciendis sit eligendi fuga tenetur tempore, perspiciatis, quos cum ea ipsa nihil consequatur numquam aliquam quibusdam ex quam iusto ipsum
-                            </p>
-                            <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="accomodation_details.html">Read more...</a>
-
-                        </div>
-                    </div>
-
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="accomodation_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://img.freepik.com/free-photo/luxury-bedroom-hotel_1150-10836.jpg?t=st=1718107495~exp=1718111095~hmac=c5bf60f31983c12bcdeeaa9c3482ff11bddde1561ceb03ca0039f02a7b327162&w=740">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="accomodation_details.html">Private Apartement</a>
-                            </h2>
-                            <p class="mt-2 text-sm text-gray-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores maiores dignissimos assumenda nihil quibusdam corrupti molestiae odio in cupiditate possimus perferendis itaque debitis, tenetur, obcaecati pariatur harum dolor eaque excepturi.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="accomodation_details.html">Read more...</a>
-
-                        </div>
-                    </div>
+<!-- section -->
+<section class=" flex items-center justify-center m-4 min-h-screen">
+    <div class="w-4/5 bg-gray-100 rounded-2xl p-8 drop-shadow-xl">
+        <ul>
+        </ul>
+        <h1 class="text-4xl font-bold mb-2">Student Hostel</h1>
+        <hr>  
+        <h2 class="text-2xl uppercase my-2">DEPARTURE PREPARATION AND TRAVEL REQUIREMENTS</h2>  
+        <hr>
+        <ul>
+            <li>
+                <h2 class="text-xl font-bold mb-2">Travel documents</h2>
+                <p class="mb-4">A passport is the most important travel document for all cross-border travelers. This is the preferred travel document for all students traveling to Ghana for their studies. At Eagle Vision Institute, we strongly recommend that all our prospective students embark on their journey to Ghana with a valid passport. This makes immigration formalities quite easy for the students.</p>
+            </li>
+            <li>
+                <h2 class="text-xl font-bold mb-2">ECOWAS ID Card (National ID Card)</h2>
+                <p class="mb-4">ECOWAS member states have recently begun issuing new ID Cards to their nationals, which they call the ECOWAS Card. This is supposed to serve as a travel document for traveling to any country within ECOWAS. However, most ECOWAS countries have not as yet implemented the use of this card for traveling. We, therefore, strongly advise our prospective students not to rely on this document for traveling to Ghana.</p>
+            </li>
+            <li>
+                <h2 class="text-xl font-bold mb-2">Laissez-passer</h2>
+                <p class="mb-4">You may also use a valid laissez-passer to travel to Ghana, but this should be only in extreme cases where a valid passport is not immediately available. Remember that a laissez-passer is only for a single entry and for a short stay. You may not use a laissez-passer more than once. We strongly advise that our students do not use laissez-passer so that they avoid getting into problems at the borders.</p>
+            </li>
+            <li>
+                <h2 class="text-xl font-bold mb-2">Student visa</h2>
+                <div class="mb-4">
+                    <h3 class="font-bold">ECOWAS Citizens</h3>
+                    <p>Citizens of ECOWAS member states are exempted from visa to enter Ghana. They only need to hold a valid passport which will be presented at the entry point (airport or border) for a stamp. The following are ECOWAS member states: BENIN, BURKINA FASO, TOGO, GUINEA, MALI, NIGER, COTE D’IVOIRE, NIGERIA, LIBERIA, SIERRA LEONE, SENEGAL, GAMBIA, CAPE VERDE, GUINEA BISSAU and GHANA</p>
                 </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- card End -->
-     
+                <div class="mb-4">
+                    <h3 class="font-bold">Non-ECOWAS Citizens</h3>
+                    <p>Nationals of countries outside ECOWAS must apply for and obtain an entry visa to Ghana before they embark on their journey. When in doubt, please contact Eagle Vision Institute (<a href="mailto:info@eaglevisionworld.com">info@eaglevisionworld.com</a> / <a href="tel:+233244662064">+233244662064</a>) for assistance.</p>
+                </div>
+            </li>
+            <li>
+                <h2 class="text-xl font-bold mb-2">Vaccination and Tests</h2>
+                <p class="mb-4">You are required to be in possession of a valid international vaccination card (yellow card), with the relevant vaccinations, issued in your home country before traveling to Ghana.</p>
+                <p class="mb-4">Additionally, in the light of the current COVID-19 pandemic, you are required to present a valid negative PCR test result which must have been taken within 72 hours before traveling. There is also a mandatory COVID-19 test on arrival at the airport at the cost of US$ 50.00 for ECOWAS citizens and US$ 150.00 for other nationals borne by the passenger.</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<!-- section End-->
     <!-- footer-->
 
     <section class="w-full bg-black" data-primary="blue-500">
@@ -187,35 +151,32 @@
                 </div>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
                     <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Product</p>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Features</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Integrations</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Documentation</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">FAQs</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Pricing</a>
+                    <a href="index.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Home</a>
+                    <a href="about.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our School</a>
+                    <a href="programmes.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our Programs</a>
+                    <a href="students.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Student Life</a>
+                    <a href="accomodation.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Accomodation</a>
                 </nav>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">About</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our
-                        Story</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Company</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">IELTS</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Privacy</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Blog</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                 </nav>
                 <nav class="col-span-2 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Contact</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Advertising</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Press</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                     <a href="#"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Email</a>
                     <a href="#"
@@ -269,4 +230,5 @@
     <!-- AlpineJS Library -->
 
 </body>
+
 </html>
