--- a/index.html
+++ b/index.html
@@ -565,16 +565,11 @@
                     learners</span>
             </h2>
             
-                <div class="flex mx-auto justify-center">
+                <div class="flex mx-auto pt-3">
                     <a href="#_"
                         class="inline-flex items-center justify-center px-5 py-3 mr-56 text-base font-medium text-white transition duration-150 ease-in-out bg-amber-400 border border-transparent rounded-md hover:text-white hover:bg-amber-500 focus:outline-none focus:shadow-outline "
                         data-primary="indigo-600">
                         Join us in Ghana
-                    </a>
-                    <a href="#_"
-                        class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-white transition duration-150 ease-in-out bg-amber-400 border border-transparent rounded-md hover:text-white hover:bg-amber-500 focus:outline-none focus:shadow-outline "
-                        data-primary="indigo-600">
-                        Online Programs
                     </a>
                 </div>
             
@@ -1052,7 +1047,7 @@
             </p>
         </div>
     </section>
-    <section class="relative py-0 bg-white lg:py-6">
+    <section class="relative py-0 bg-white lg:py-6 sm:px-12">
 
         <div class="flex flex-col items-center justify-between px-10 mx-auto max-w-8xl  lg:flex-row">
 
