--- a/students.html
+++ b/students.html
@@ -143,7 +143,7 @@
 
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
                         </a>
@@ -160,7 +160,7 @@
 
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
                         </a>
@@ -177,7 +177,7 @@
                     </div>
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://cdn.devdojo.com/images/may2021/workstation.jpg">
                         </a>
@@ -193,7 +193,7 @@
 
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
                         </a>
@@ -208,7 +208,7 @@
                     </div>
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
                         </a>
@@ -224,7 +224,7 @@
                     </div>
                     <div
                         class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="#_" class="block transition duration-200 ease-out transform hover:scale-110">
+                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
                             <img class="object-cover w-full shadow-sm "
                                 src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
                         </a>
