--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
                 <a href="#_" 
-                class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Online programme
+                class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Online programme
                 </a>
             </div>
         </div>
@@ -89,7 +89,7 @@
                         class="w-6" alt="">
                     </a>
                 <a href="register.html"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Join us in Ghana</a>
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Join us in Ghana</a>
             </div>
         </div>
     </section>
@@ -110,35 +110,32 @@
                 </div>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
                     <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Product</p>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Features</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Integrations</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Documentation</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">FAQs</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Pricing</a>
+                    <a href="index.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Home</a>
+                    <a href="about.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our School</a>
+                    <a href="programmes.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our Programs</a>
+                    <a href="students.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Student Life</a>
+                    <a href="accomodation.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Accomodation</a>
                 </nav>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">About</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our
-                        Story</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Company</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">IELTS</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Privacy</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Blog</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                 </nav>
                 <nav class="col-span-2 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Contact</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Advertising</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Press</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                     <a href="#"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Email</a>
                     <a href="#"
